Add `/mnt/physicsdemos-data` to docker-compose.yml
The physicsdemos data directory is expected to be in the address
`/mnt/physicsdemos-data`, before this commit it just wasn't there.

Now docker expects to find this directory in the root of the project,
and it automatically mounts it inside the container in the correct
address.

If the directory doesn't exists docker creates it empty, it causes
no problem on the website but the videos and thumbnails will not
show up.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 
 services:
-  site:
+  app:
     build: .
     image: physicsdemos
     container_name: physicsdemos.app
@@ -11,6 +11,7 @@ services:
       - ./site:/site
       - ./apache2/sites-enabled/000-default.conf:/etc/apache2/sites-enabled/000-default.conf
       - ./apache2/apache2.conf:/etc/apache2/apache2.conf
+      - ./physicsdemos-data:/mnt/physicsdemos-data
     links:
       - mysql
   mysql:
