Change position of physicsdemos.mysql database in host
Before this commit it was kept inside `/var/lib/docker` now it
is kept in a separated directory inside `/var/lib`.

This was necessary because the permissions for `/var/lib/docker`
would not allow the creation of a new directory inside of it.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     volumes:
       # The database files will be saved on the
       # host machine for persistency:
-      - /var/lib/docker/physicsdemos.mysql:/var/lib/mysql
+      - /var/lib/physicsdemos.mysql:/var/lib/mysql
   redis:
     image: redis
     container_name: physicsdemos.redis
